--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+    <header>
+        <nav id="menu">   
+            <a href="index.html">Garlic Bread</a>
+            <a href="index2.html">Sea food</a>
+             <a href="index3.html">Paslam</a>
+          
+        </nav>
+
+</header>
+
 <body>
-    
+   <h1>Sea food</h1> 
 </body>
 </html>
