--- a/index3.html
+++ b/index3.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav id="menu">   
+            <a href="index.html">Garlic Bread</a>
+               <a href="index2.html">Seafood</a>	
+               <a href="index3.html">Paslam</a>
+         
+        </nav>
+    </header>
+    <h1>Paslam</h1>
 </body>
 </html>
