--- a/index2.html
+++ b/index2.html
@@ -35,8 +35,14 @@
         <p>Arroz de Marisco is a seafood classic from Portuguese Cuisine. 
                 . It usually comprises 
                  of a variety of shellfish, peppers, tomatoes, fresh herbs, and short-grain rice making an indulgent and delicious dish. For those that are not convinced yet, it was also 
-                selected in 2011 as one of the 7 Wonders of Portuguese Gastronomy.</p>
-        </section>
+                selected in 2011 as one of the 7 Wonders of Portuguese Gastronomy.
+                This seafood rice recipe is loaded with flavor. It combines perfectly 
+                seasoned rice, vegetables, and shrimp to create a simple yet delicious
+                 fried rice recipe everyone will love. And the best part is that it's 
+                 so easy to make. In fact, 
+                you can get this super delicious seafood recipe ready in well under 30 minutes!</p>
+        
+            </section>
     
             <div class="ela">
             <h2>Ingredients</h2>
@@ -68,14 +74,11 @@
         <footer>
 	        <div class="footer22">
 	            <small>
-		            &copy; Copyright 2023 Andreia Recipes
+		            &copy; Copyright 2023 Sara
 		            <a href="#">Privacy Policy</a>  
-		            <a href="#">Terms Of Use</a>
-	                <a href="#">FAQ</a>  
+		            <a href="#">Submit a review</a>
+	                <a href="#">Subscribe</a>  
 	                <a href="#">Contact</a>
-					<img class="instagram" src="img/instagram.png" alt="instagram">
-					<img class="facebook" src="img/facebook.png" alt="facebook">
-					<img class="twitter" src="img/twitter.png" alt="twitter"> 
 	            </small>
 			</div>   
         </footer>
