--- a/index.html
+++ b/index.html
@@ -3,24 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
-    crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" 
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Favorite food</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link href="https://cdnjs.com/libraries/font-awesome">
+    <title>Café</title>
 </head>
-<header>
-
-        <nav id="menu">   
-            <a href="index.html">Garlic Bread</a>
-            <a href="index2.html">Sea food</a>
-            <a href="index3.html">Paslam</a>	
-        </nav>
-    
-</header>
-
 <body>
-    <h1>Garlic Bread</h1>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container">
+          <a class="navbar-brand" href="#">Redde</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                      <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="#">About us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Reservation</a></li>
+                      </ul>
+                      <a href="#" class="navbar-brand d-none d-lg-flex mx-lg-auto">Reddé</a>
+                      <ul class="navbar-nav">
+                        <li class="nav-item"><a class="nav-link" href="#">News & Events</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Gallery</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                      </ul>
+                    </div>
+          </div>
+        </div>
+      </nav>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+      <main class="d-flex min-vh-100 bg-primary">
+        <div class="conatainer my-auto">
+            <div class="col-12 col-md-8 col-lg-6 bg-succes">
+                <!-- Preheading -->
+                <h6 class="col-12 col-md-8 col-lg-6">
+                    <span class="text-warning">Cafe</span> / Restaurant
+                </h6>
+                <!-- Heading -->
+                <h1 class="dispaly-1 text-white mb-2">Redde</h1>
+                <!-- Subheading -->
+                <p class="mb-5">A unique café located in the heart of London. Always fresh coffee and biscuits. Open for indoor
+                    dining and to-go orders.</p>
+                <!-- Button -->
+                <a href="#" class="btn btn-outline-warning p-3 rounded-0">hello</a>
+            </div>
+        </div>
+      </main>
+      <footer>
+        <div class="container">
+          <div class="row">
+            <div class="d-flex justify-content-between mb-3">
+              <div class="social-icons">
+                <i class="fa-brands fa-twitter fs-3"></i>
+                <i class="fa-brands fa-facebook fs-3"></i>
+                <i class="fa-brands fa-instagram fs-3"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
 </body>
 </html>
