--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://cdnjs.com/libraries/font-awesome">
+    <link rel="stylesheet" href="Group-Project-\static\css\style_1.css">
     <title>Café</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container">
-          <a class="navbar-brand" href="#">Redde</a>
+          <a class="navbar-brand" href="#">FoodTastic!</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -18,50 +19,55 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                       <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="#">About us</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Reservation</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
                       </ul>
-                      <a href="#" class="navbar-brand d-none d-lg-flex mx-lg-auto">Reddé</a>
+                      <a href="#" class="navbar-brand d-none d-lg-flex mx-lg-auto">Garlic Bread</a>
                       <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="#">News & Events</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Gallery</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Contact us</a></li>
                       </ul>
                     </div>
           </div>
         </div>
       </nav>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-      <main class="d-flex min-vh-100 bg-primary">
-        <div class="conatainer my-auto">
-            <div class="col-12 col-md-8 col-lg-6 bg-succes">
-                <!-- Preheading -->
-                <h6 class="col-12 col-md-8 col-lg-6">
-                    <span class="text-warning">Cafe</span> / Restaurant
-                </h6>
-                <!-- Heading -->
-                <h1 class="dispaly-1 text-white mb-2">Redde</h1>
-                <!-- Subheading -->
-                <p class="mb-5">A unique café located in the heart of London. Always fresh coffee and biscuits. Open for indoor
-                    dining and to-go orders.</p>
-                <!-- Button -->
-                <a href="#" class="btn btn-outline-warning p-3 rounded-0">hello</a>
-            </div>
-        </div>
-      </main>
-      <footer>
-        <div class="container">
-          <div class="row">
-            <div class="d-flex justify-content-between mb-3">
-              <div class="social-icons">
-                <i class="fa-brands fa-twitter fs-3"></i>
-                <i class="fa-brands fa-facebook fs-3"></i>
-                <i class="fa-brands fa-instagram fs-3"></i>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-3">
+            <div class="p-3 border bg-light" background-color="blue">
+              <p><strong>List of ingredients (servings 4-8)</strong></p>
+              <ul>16-ounce (450 g) loaf Italian bread or French bread</ul>
+              <ul>1/2 cup (1 stick, 112 g) unsalted butter, softened</ul>
+              <ul>2 large cloves garlic, smashed and minced</ul>
+              <ul>1 heaping tablespoon chopped fresh parsley</ul>
+              <ul>1/4 cup (25 g) freshly grated Parmesan cheese (optional)</ul>
+              <ul>  </ul>
+              <ul> </ul>
+              <ul> </ul>
               </div>
+          </div>
+          <div class="col-sm-9">
+            <div class="p-3 border bg-light">
+              <p class="p-3"><strong>Method</strong></p>
+              <ol>Preheat oven to 350°F</ol>
+              <ol>Cut the loaf in half, horizontally. Mix the butter, garlic, and parsley together in a small bowl. Spread butter mixture over the the two bread halves.</ol>
+              <ol>Place on a sturdy baking pan (one that can handle high temperatures, not a cookie sheet) and heat in a 350°F (175°C) oven for 10 minutes. </ol>
+              <ol> Remove pan from oven. Sprinkle Parmesan cheese over bread if you want. Return to oven on the highest rack. Broil on high heat for 2 to 3 minutes until the edges of the bread begin to toast and the cheese (if you are using cheese) bubbles. Watch very carefully while broiling. The bread can easily go from un-toasted to burnt. </ol>
+              <ol>Remove from oven, let cool a minute. Remove from pan and use a bread knife to cut into 1-inch thick slices. Serve immediately.</ol>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="col-xs-2 col-sm-6 col-md-4">
+              <img id="img" src="https://www.shutterstock.com/image-photo/garlic-herb-bread-slices-260nw-142418746.jpg" class="img-responsive img-rounded">
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="col-xs-2 col-sm-6 col-md-4">
             </div>
           </div>
         </div>
-      </footer>
+      </div>
+        </div>
+      </div>
 </body>
 </html>
