--- a/index2.html
+++ b/index2.html
@@ -21,8 +21,8 @@
         </button>
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="index2.html">Sea food</a></li>
-            <li class="nav-item"><a class="nav-link" href="#index.html">Garlic Bread</a></li>
-            <li class="nav-item"><a class="nav-link" href="#index3.html">Mash potato</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html">Garlic Bread</a></li>
+            <li class="nav-item"><a class="nav-link" href="index3.html">Mash potato</a></li>
           </ul>
     </nav>
     <section class="main22">
